<resources>
    <string name="app_name">LongKhan</string>
    <string name="get_started_with_google">Get Started with Google</string>
    <string name="sign_out">Sign out</string>
    <string name="username">username</string>
    <string name="todo">TODO</string>
    <string name="profile_display">profile_display</string>
    <string name="id">ID</string>
    <string name="add_join_trip">add_join_trip</string>
    <string name="signin">Sign in</string>
    <string name="cancel">Cancel</string>
    <string name="end_date">End Date</string>
    <string name="start_date">Start Date</string>
    <string name="trip_title">Title</string>
    <string name="join_code">Join Code</string>
    <string name="code">Code</string>
    <string name="Cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="amount">Amount</string>
    <string name="random">Random</string>
    <string name="your_amount">your amount</string>
    <string-array name="Equal">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="Category">
        <item>Food</item>
        <item>Transport</item>
        <item>Accommodation</item>
        <item>Appliances</item>
        <item>Etc</item>
    </string-array>
    <string-array name="Currency">
        <item>THB</item>
        <item>USD</item>
        <item>GBP</item>
        <item>EUR</item>
        <item>JPY</item>
        <item>HKD</item>
        <item>MYR</item>
        <item>SGD</item>
        <item>BND</item>
        <item>CNY</item>
        <item>IDR</item>
        <item>MMK</item>
        <item>INR</item>
        <item>KRW</item>
        <item>LAK</item>
        <item>PHP</item>
        <item>TWD</item>
        <item>AUD</item>
        <item>NZD</item>
        <item>CHF</item>
        <item>DKK</item>
        <item>NOK</item>
        <item>SEK</item>
        <item>CAD</item>
        <item>RUB</item>
        <item>VND</item>
        <item>ZAR</item>
        <item>AED</item>
        <item>BHD</item>
        <item>OMR</item>
        <item>QAR</item>
        <item>SAR</item>
    </string-array>

</resources>
