<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/fui_transparent"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/yellow"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_marginTop="15dp"
            android:id="@+id/edit_trip_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/boogaloo"
            android:text="Edit Trip"
            android:textColor="@color/grey"
            android:textSize="30dp" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_below="@id/edit_trip_label"
            android:id="@+id/edit_image_trip"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="30dp"
            android:src="@drawable/team_image">
        </de.hdodenhof.circleimageview.CircleImageView>

        <ImageView
            android:id="@+id/edit_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/edit_image_trip"
            android:layout_below="@id/edit_image_trip"
            app:srcCompat="@drawable/add"
            android:contentDescription="@string/todo" />

        <EditText
            android:id="@+id/edit_trip_title"
            android:layout_below="@id/edit_trip_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_toRightOf="@+id/edit_image_trip"
            android:hint="@string/trip_title"
            android:textSize="25dp"
            android:textAlignment="textStart"
            android:inputType="textEmailSubject"
            android:ems="15"
            android:textColor="@color/dark_brown"
            android:autofillHints=""
            android:maxLength="15" />

        <TextView
            android:id="@+id/edit_user_amount"
            android:clickable="false"
            android:fontFamily="@font/boogaloo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/edit_image_trip"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:autofillHints=""
            android:layout_below="@id/edit_amount_label"
            android:hint="00.00"
            android:textAlignment="center"
            android:textSize="35dp"
            android:textColor="@color/grey"
            android:inputType="numberDecimal"
            android:maxLength="12" />

        <TextView
            android:id="@+id/edit_amount_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_amount"
            android:textColor="@color/grey"
            android:fontFamily="@font/boogaloo"
            android:textSize="20dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_toRightOf="@id/edit_image_trip"
            android:layout_below="@id/edit_trip_title"/>

        <TextView
            android:id="@+id/edit_trip_currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_amount_label"
            android:layout_marginTop="25dp"
            android:text="THB"
            android:clickable="false"
            android:layout_toRightOf="@id/edit_user_amount"
            android:layout_marginStart="15dp"
            android:fontFamily="@font/boogaloo"
            android:textColor="@color/grey"
            android:textSize="25dp"
            />


        <TextView
            android:layout_below="@id/edit_user_amount"
            android:id="@+id/edit_start_date_label"
            android:layout_marginStart="45dp"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/grey"
            android:fontFamily="@font/boogaloo"
            android:textSize="20dp"
            android:text="@string/start_date" />

        <TextView
            android:id="@+id/edit_start_date"
            android:clickable="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_user_amount"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:layout_toRightOf="@id/edit_start_date_label"
            android:fontFamily="@font/boogaloo"
            android:textColor="@color/grey"
            android:textSize="25dp"
            android:text="MMM DD, YYYY"

            />


        <TextView
            android:layout_below="@id/edit_start_date"
            android:layout_marginTop="15dp"
            android:id="@+id/edit_end_date_label"
            android:textColor="@color/grey"
            android:layout_marginStart="50dp"
            android:textSize="20dp"
            android:fontFamily="@font/boogaloo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_date"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/edit_end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_start_date"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"
            android:layout_toRightOf="@id/edit_end_date_label"
            android:fontFamily="@font/boogaloo"
            android:textColor="@color/grey"
            android:textSize="25dp"
            android:text="MMM DD, YYYY"
            android:clickable="false"
            />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_end_date">

            <TextView
                android:id="@+id/edit_tip_code_label"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/boogaloo"
                android:layout_width="wrap_content"
                android:layout_toLeftOf="@+id/edit_trip_code"
                android:layout_marginRight="15dp"
                android:layout_centerVertical="true"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/code" />

            <TextView
                android:id="@+id/edit_trip_code"
                android:layout_marginTop="7dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textSize="25sp"
                android:fontFamily="@font/boogaloo"
                android:text="HHHHHH"
                android:layout_centerHorizontal="true"
                android:textColor="@color/yellow"
                android:background="@color/red_indian"/>

            <Button
                android:id="@+id/ok_edit_trip_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/green"
                android:textColor="@color/cream"
                android:text="@string/ok"
                android:fontFamily="@font/boogaloo"
                android:layout_toRightOf ="@id/edit_trip_code"
                android:layout_marginStart="15dp"
                android:layout_centerVertical="true"
                android:textSize="20dp" />

        </RelativeLayout>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>